--- a/style.css
+++ b/style.css
@@ -1,1 +1,115 @@
+body {
+  width: 100%;
+}
+.movies-grid {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  max-width: 70%;
+}
+.grid-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav_bar {
+  width: 100%;
+  height: 20%;
+  background-color: #8b0000;
+  align-items: center;
+  margin-top: 0;
+}
 
+h1,
+h2,
+h3,
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #ffffff;
+}
+#search-input,
+#submit {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 500;
+  color: black;
+}
+.movie-card {
+  background-color: #282626;
+  border-radius: 2%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  overflow-wrap: break-word;
+}
+body {
+  background-color: #000000;
+  margin: 0;
+}
+.movie-title,
+.movie-votes {
+  padding-left: 2vh;
+}
+.movie-poster {
+  border-radius: 2%;
+  border-color: none;
+  height: 300px;
+  margin: 20px;
+}
+.movie-card:hover {
+  transform: scale(1.05);
+}
+.movie-card {
+  margin: 30px;
+  flex-wrap: wrap;
+}
+.heading {
+  text-align: center;
+}
+.title-name {
+  margin-top: 0;
+  padding-top: 2%;
+  color: #ffffff;
+  font-size: 40px;
+  font-style: italic;
+}
+#now-playing {
+  margin-left: 50px;
+  font-size: 30px;
+}
+#search-input {
+  width: 20%;
+  height: 30px;
+  border-radius: 2%;
+}
+#submit {
+  height: 35px;
+}
+#cancel-button {
+  height: 35px;
+  font-size: 15px;
+}
+#searchbar {
+  margin-top: 20px;
+  border: none;
+}
+.btn-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#load-more-movies-btn {
+  margin-bottom: 15px;
+  width: 200px;
+  height: 30px;
+  text-align: center;
+  color: white;
+  font-weight: 700;
+  font-size: larger;
+  background-color: #8b0000;
+  border-color: none;
+  border-radius: 2px;
+  border: none;
+}
+#load-more-movies-btn:hover {
+  transform: scale(1.2);
+}
